--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,10 @@
-:root {
+body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
+  margin: 0;
+  padding: 0;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
@@ -23,8 +17,9 @@ a:hover {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
+  margin: 15px 0;
 }
 
 button {
@@ -57,4 +52,70 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+input {
+  height: 30px;
+  border-radius: 3px;
+  background-color: rgb(95, 95, 95);
+  border: 2px #242424;
+}
+
+.overall-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 2vw;
+}
+
+.form-containers {
+  padding: 1vw;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+}
+
+.education-container {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  gap: 10px;
+}
+
+.education-holding {
+  display: flex;
+  flex-direction: column;
+}
+
+.delete-button {
+  background-color: #f93e3e;
+  margin-left: auto;
+}
+
+.add-education:hover {
+  cursor: pointer;
+}
+
+.result-container {
+  padding: 1vw;
+  width: 48vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.result-page {
+  width: 30vw;
+  background-color: white;
+  color: black;
+  height: 45vw;
+  padding: 1vw;
+  overflow: none;
 }
